plex/requestrr/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: requestrr
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 4545
  selector:
    name: requestrr
