plex/requestrr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-lan-requestrr
spec:
  ingressClassName: nginx-lan
  rules:
  - host: requestrr.local
    http:
      paths:
      - backend:
          service:
            name: requestrr
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - requestrr.local
